src/test/ui/nll/closure-requirements/propagate-from-trait-match.stderr
note: external requirements
  --> $DIR/propagate-from-trait-match.rs:32:36
   |
LL |     establish_relationships(value, |value| {
   |                                    ^^^^^^^
   |
   = note: defining type: supply::<'_#1r, T>::{closure#0} with closure substs [
               i32,
               extern "rust-call" fn((T,)),
               (),
           ]
   = note: number of external vids: 2
   = note: where T: '_#1r

note: no external requirements
  --> $DIR/propagate-from-trait-match.rs:28:1
   |
LL | / fn supply<'a, T>(value: T)
LL | | where
LL | |     T: Trait<'a>,
   | |_________________^
   |
   = note: defining type: supply::<'_#1r, T>

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/propagate-from-trait-match.rs:32:36
   |
LL |       establish_relationships(value, |value| {
   |  ____________________________________^
LL | |
LL | |
LL | |         // This function call requires that
...  |
LL | |         require(value);
LL | |     });
   | |_____^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     T: Trait<'a> + 'a,
   |                  ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
